# feinn_project

./: .gitignore  README.md  pyproject.toml  setup.sh
notebooks/FEINN-FNO/meshes/: RVE_Circular_32x32_f0.25.med  RVE_Circular_64x64_f0.25.med  RVE_Periodic_32x32_f0.50.med  RVE_Periodic_64x64_f0.50.med
notebooks/FEINN-FNO/microgenerator/: microstructures_test.ipynb
notebooks/FEINN_example1/: CantileverBeamTorch-v2.ipynb  CantileverBeamTorch.ipynb  E1_cantilever.med  test_feinn.ipynb  test_feinn_torch.ipynb
notebooks/FEINN_example2/: E2_perforated_plate.ipynb  PerforatedPlate.med  results.vtu
notebooks/FEINN_example3/: E3_RVE.ipynb
notebooks/FEINN_example4/: E4_MultiMat.ipynb  MultiMat.med
notebooks/MS-FNO/: CantileverExample.ipynb  HG_bound_comparison.ipynb  MS_E1_cantilever.ipynb
notebooks/MS-FNO/microgenerator/: microstructures_test.ipynb
notebooks/RVE_data_generation/: RVE_FNO_hpo.ipynb  RVE_FNOtraining.ipynb  RVE_data_generation.ipynb  RVE_data_preprocessing.ipynb  RVE_strain_generation.ipynb
notebooks/RVE_data_generation/checkpoints/: rve1_fno_config.pth
notebooks/RVE_data_generation/checkpoints/rve1_hpo/: rve1_hpo_all_trials.csv  rve1_hpo_pareto_front.csv
notebooks/RVEs/: RVE_FNO_testing.ipynb
notebooks/RVEs/Run1/: RVE_FNO_hpo.ipynb  RVE_FNO_testing.ipynb  RVE_FNO_training.ipynb  RVE_data_generation.ipynb  RVE_data_preprocessing.ipynb
notebooks/RVEs/Run2/: RVE_FNO_hpo.ipynb  RVE_FNO_testing.ipynb  RVE_FNO_training v01.02.ipynb  RVE_FNO_training v01.04.ipynb  RVE_FNO_training v01.07.ipynb  RVE_FNO_training v10.ipynb  RVE_FNO_training v2.ipynb  RVE_FNO_training v5.ipynb  RVE_FNO_training v6.ipynb  RVE_FNO_training v8.ipynb  RVE_FNO_training v9.ipynb  RVE_FNO_training.ipynb  RVE_data_generation.ipynb  RVE_data_preprocessing.ipynb  RVE_zero shot.ipynb  RVE_zero_shot_stats.ipynb  stress_evolution_video.ipynb
notebooks/RVEs/checkpoints/: rve1_fno_normalizers.pth  rve2_fno_config.pth  rve2_fno_normalizers.pth  rve2_fno_v2_config.pth
notebooks/RVEs/checkpoints/rve2_hpo/: rve2_hpo_all_trials.csv  rve2_hpo_pareto_front.csv
notebooks/meshes/: Cantilever.med  Cook.med  MatrixFiberRVE.med  MultiMat.med  PerforatedPlateQ8.med  PerforatedPlateQ9.med  PerforatedPlateREFI1.med  PerforatedPlateREFI2.med
notebooks/test/: test_feinn.ipynb  test_feinn_paper1.ipynb  test_feinn_torch.ipynb  test_mesh.ipynb
src/: batch_elements.py  conditions.py  data_generator.py  elements.py  evaluator.py  feinn_solver.py  fem_elements.py  fem_utils.py  materials.py  materials2.py  matmodels.py  mesh_utils.py  mesher.py  microstructures.py  nn_models.py  rve_analyzer.py  solver.py  trainer.py  trainer_utils.py  utils.py
src/Superados/01_01-12-25 (numpy backend)/: feinn_solver.py  fem_elements.py  fem_utils.py  matmodels.py  mesh_utils.py
src/test/: test_mesh.py
