[tool.poetry]
name = "feinn-project"
version = "0.1.0"
description = "Finite Element integrated Neural Network Project"
authors = ["Braian Desia"]
readme = "README.md"

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2.3.2,<3.0.0"
matplotlib = ">=3.10.6,<4.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
jupyter = "^1.1.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
