[tool.poetry]
name = "feinn-project"
version = "0.1.0"
description = "Finite Element integrated Neural Network Project"
authors = ["Braian Desia"]
readme = "README.md"

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2.3.2,<3.0.0"
matplotlib = ">=3.10.6,<4.0.0"
numba = "^0.62.1"
torch = {version = "2.6.0+cpu", source = "pytorch-cpu"}
meshio = {extras = ["all"], version = "^5.3.5"}
torchinfo = "^1.8.0"
opt-einsum = "^3.4.0"
scipy = "^1.16.3"
scikit-learn = "^1.8.0"
neuraloperator = {git = "https://github.com/neuraloperator/neuraloperator.git"}
tqdm = "^4.67.3"
optuna = "^4.7.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.31.0"
jupyterlab = "^4.2.0"
jupyterlab-widgets = "3.0.13"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
