[tool.poetry]
name = "feinn-project"
version = "0.1.0"
description = "Finite Element integrated Neural Network Project"
authors = ["Braian Desia"]
readme = "README.md"

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2.3.2,<3.0.0"
matplotlib = ">=3.10.6,<4.0.0"
numba = "^0.62.1"
meshio = {extras = ["all"], version = "^5.3.5"}
torchinfo = "^1.8.0"
opt-einsum = "^3.4.0"
scipy = "^1.16.3"
scikit-learn = "^1.8.0"
neuraloperator = {git = "https://github.com/neuraloperator/neuraloperator.git"}
tqdm = "^4.67.3"
optuna = "^4.7.0"
wandb = "^0.25.0"
torchvision = {version = "^0.21.0", source = "pytorch-cu124"}
torchaudio = {version = "^2.6.0", source = "pytorch-cu124"}
torch = {version = "^2.6.0", source = "pytorch-cu124"}
optuna-integration = {extras = ["wandb"], version = "^4.7.0"}
loadenv = "^0.1.1"
dotenv = "^0.9.9"
pandas = "^3.0.1"
plotly = "^6.6.0"
autoreload = "^0.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.31.0"
jupyterlab = "^4.2.0"
jupyterlab-widgets = "3.0.13"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
